crates/ruff_python_parser/tests/snapshots/invalid_syntax@raise_stmt_unparenthesized_tuple_cause.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/raise_stmt_unparenthesized_tuple_cause.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..34,
        body: [
            Raise(
                StmtRaise {
                    node_index: NodeIndex(None),
                    range: 0..15,
                    exc: Some(
                        Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 6..7,
                                id: Name("x"),
                                ctx: Load,
                            },
                        ),
                    ),
                    cause: Some(
                        Tuple(
                            ExprTuple {
                                node_index: NodeIndex(None),
                                range: 13..15,
                                elts: [
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 13..14,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                                runtime_elts: None,
                            },
                        ),
                    ),
                },
            ),
            Raise(
                StmtRaise {
                    node_index: NodeIndex(None),
                    range: 16..33,
                    exc: Some(
                        Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 22..23,
                                id: Name("x"),
                                ctx: Load,
                            },
                        ),
                    ),
                    cause: Some(
                        Tuple(
                            ExprTuple {
                                node_index: NodeIndex(None),
                                range: 29..33,
                                elts: [
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 29..30,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 32..33,
                                            id: Name("z"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                                runtime_elts: None,
                            },
                        ),
                    ),
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | raise x from y,
  |              ^^ Syntax Error: Unparenthesized tuple expression cannot be used here
2 | raise x from y, z
  |


  |
1 | raise x from y,
2 | raise x from y, z
  |              ^^^^ Syntax Error: Unparenthesized tuple expression cannot be used here
